2007-12-20  Christian Persch  <chpe@gnome.org>

	* modules/other/gail/Makefile.am:
	* modules/other/gail/gailimage.c: (gail_image_class_init),
	(gail_image_init), (elide_underscores), (gail_image_get_name),
	(atk_image_interface_init), (gail_image_finalize):
	* modules/other/gail/gailimage.h:
	R modules/other/gail/gailintl.h:
	* po/POTFILES.skip: Use the stock item's label as the name of the
	accessible in gailimage.c. Bug #504246.

2007-12-19  Mathias Hasselmann  <mathias@openismus.com>

	Avoid some compiler warnings and remove obsolete code. (#339540)

	* gtk/gtkcalendar.c: Change week and year variable in
	calendar_paint_week_numbers from gint to guint. Remove obsolete "#if
	0" block from calendar_paint_day: The feature in question is handled
	few lines above. Cast data returned by gtk_selection_data_get_text()
	to (gchar*) in gtk_calendar_drag_data_received.

2007-12-19 17:05:31  Tim Janik  <timj@imendio.com>

	* modules/other/Makefile.am: include Makefile.decl to unbreak test rules.

2007-12-19  Johan Dahlin  <johan@gnome.org>

	* tests/buildertest.c (test_object_properties): 
	Add another call to gtk_builder_add_string after using
	delayed properties, as reported in #504393 but already
	fixed in #495769.

2007-12-18  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/libgail-util/*:
	* gail-uninstalled.pc.in:
	* gail.pc.in:
	* modules/Makefile.am:
	* modules/other/Makefile.am:
	* modules/other/gail/*:
	* modules/other/gail/libgail-util/*:
	* po/POTFILES.skip: Integrate gail into gtk+. Bug #169488.

2007-12-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksettings.c: Add a gtk-im-module GTK setting
	* gdk/win32/gdkproperty-win32.c: 
	* gdk/x11/gdksettings.c: ...and back it by a Gtk/IMModule X setting.

	* gtk/gtkimmodule.[hc]: 
	* gtk/gtkimmulticontext.[hc]: When determining the default context,
	look at the gtk-im-module setting, and listen for changes to the
	setting.  (#502446, Akira Tagoh)
