@@ -1,3 +1,8 @@
+2007-12-20  Richard Hult  <richard@imendio.com>
+
+	* modules/other/gail/gailwindow.c: (gail_window_get_mdi_zorder):
+	Add stub for quartz for fix build.
+
 2007-12-20  Christian Persch  <chpe@gnome.org>
 
 	* modules/other/gail/Makefile.am:
